--- a/examples/with-apollo/src/modules/user/users/Users.module.css
+++ b/examples/with-apollo/src/modules/user/users/Users.module.css
@@ -8,6 +8,15 @@
   margin-top: 0;
 }
 
+.usersResponse {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 600;
+}
+
 .usersCodeBlock {
   background-color: #f8f8f8;
   padding: 0.875rem;
@@ -38,6 +47,35 @@
   cursor: pointer;
   font-size: 16px;
   padding-inline: 1.5rem;
+}
+
+.errorContainer {
+  display: flex;
+  gap: 1rem;
+  padding: 1rem 2rem 1rem 1rem;
+  background: sienna;
+  color: white;
+  max-width: fit-content;
+  margin-top: 1rem;
+  border-radius: 5px;
+  position: relative;
+}
+
+.errorContainer p {
+  margin: 0;
+}
+
+.errorContainer button {
+  padding: 0;
+  margin: 0;
+  height: fit-content;
+  background: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+  position: absolute;
+  top: 8px;
+  right: 8px;
 }
 
 .userGrid {
