--- a/packages/core/devtools-styles.css
+++ b/packages/core/devtools-styles.css
@@ -109,9 +109,28 @@
   margin-block-end: 0.875rem;
 }
 
+.mock-devtools__select-container {
+  position: relative;
+}
+
+.mock-devtools__select-container:after {
+  content: "\203A";
+  font-size: 25px;
+  color: #3a3a3a;
+  transform: rotate(90deg);
+  right: 8px;
+  top: -1px;
+  position: absolute;
+  pointer-events: none;
+}
+
 .mock-devtools__form-control select {
+  appearance: none;
   width: fit-content;
-  padding: 0.175rem;
+  border: 1px solid #c3c3c3;
+  padding: 0.375rem 2rem 0.375rem 0.375rem;
+  border-radius: 4px;
+  font-size: 12px;
 }
 
 .mock-devtools__form-control input {
